# gvmr-lite-rs

./: .dockerignore  .gitignore  Cargo.toml  Cargo.toml.backup  Dockerfile  README.md  bacon.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fmt.yml  lint.yml  release-fast.yml  release.yml
crates/gvmr-cli/: Cargo.toml
crates/gvmr-cli/src/: cli.rs  cli_render.rs  cli_render_tests.rs  cli_tests.rs  error.rs  main.rs
crates/gvmr-core/: Cargo.toml
crates/gvmr-core/src/: lib.rs
crates/gvmr-core/src/domain/: audit_report_model.rs  audit_report_model_tests.rs  mod.rs  report_format.rs  report_model.rs  report_model_tests.rs
crates/gvmr-core/src/infra/: process.rs
crates/gvmr-core/src/service/: format_cache.rs  format_cache_tests.rs  json_report_renderer.rs  mod.rs  pdf_renderer_helper.rs  pdf_renderer_helper_tests.rs  report_json_injector.rs  report_json_injector_tests.rs  report_renderer.rs  report_view.rs  report_view_tests.rs  xml_report_renderer.rs  xml_report_renderer_tests.rs
crates/gvmr-core/src/service/audit/: audit_report_json_xml_builder.rs  audit_report_json_xml_builder_tests.rs  audit_report_renderer.rs  audit_report_renderer_tests.rs  audit_report_xml_builder.rs  audit_report_xml_builder_tests.rs  mod.rs
crates/gvmr-core/src/service/native_pdf/: cover.rs  cover_tests.rs  document.rs  document_tests.rs  finding_tests.rs  findings.rs  findings_tests.rs  grouping.rs  grouping_tests.rs  hosts.rs  hosts_test.rs  layout.rs  layout_tests.rs  mod.rs  output.rs  output_tests.rs  overview.rs  overview_tests.rs  pdf_renderer.rs  renderer.rs  renderer_tests.rs  target.rs  target_tests.rs  toc.rs  toc_tests.rs
crates/gvmr-core/src/service/typst/: mod.rs  renderer.rs  report_view_tests.rs  source_builder.rs  source_builder_tests.rs  typst_escape_tests.rs  workdir.rs  workdir_tests.rs
crates/gvmr-core/src/xml/: mod.rs  report_format_parser_tests.rs  report_validator_tests.rs
crates/gvmr-core/tests/: golden_report_xml_builder.rs
crates/gvmr-core/tests/fixtures/: report_expected.xml
crates/gvmr-server/: Cargo.toml
crates/gvmr-server/src/: lib.rs  lib_tests.rs  main.rs
crates/gvmr-server/src/api/: audit_report_format_tests.rs  audit_report_formats.rs  debug.rs  debug_tests.rs  health_tests.rs  mod.rs  render.rs  render_audit.rs  render_audit_tests.rs  render_tests.rs  report_format.rs  report_format_tests.rs
crates/gvmr-server/src/api/dto/: mod.rs  render_audit.rs  render_audit_tests.rs  render_audit_xml.rs  render_audit_xml_tests.rs  render_tests.rs  render_xml.rs  render_xml_tests.rs  report_format.rs  report_format_tests.rs  report_json_converter.rs
crates/gvmr-server/src/app/: error.rs  router.rs  router_tests.rs  state.rs  state_tests.rs
crates/gvmr-server/src/auth/: jwt.rs  jwt_tests.rs  middleware.rs  middleware_tests.rs  scope.rs
crates/gvmr-server/src/config/: settings_tests.rs
crates/gvmr-server/src/openapi/: mod.rs
crates/gvmr-server/src/telemetry/: mod.rs
docs/: ENVIRONMENT_VARIABLES.md
scripts/: report.xml  test-jwt-auth.sh  test-render-xml.sh
src/: cli.rs  cli_render.rs  lib.rs  lib_tests.rs  main.rs
src/api/: debug.rs  debug_tests.rs  error.rs  error_tests.rs  health.rs  health_tests.rs  mod.rs  render.rs  render_tests.rs  report_format.rs  report_format_tests.rs
src/api/dto/: health.rs  health_tests.rs  mod.rs  render.rs  render_tests.rs  render_xml.rs  render_xml_tests.rs  report_format.rs  report_format_tests.rs  report_json_converter.rs  report_json_converter_tests.rs
src/app/: error.rs  mod.rs  router.rs  router_tests.rs  state.rs  state_tests.rs
src/auth/: bearer.rs  bearer_tests.rs  context.rs  context_tests.rs  jwt.rs  jwt_tests.rs  middleware.rs  middleware_tests.rs  mod.rs  scope.rs  scope_tests.rs
src/config/: settings.rs  settings_tests.rs
src/domain/: mod.rs  report_format.rs  report_format_constants.rs  report_model.rs  report_model_tests.rs  report_xml_constants.rs
src/infra/: fs.rs  fs_tests.rs  process.rs  process_tests.rs
src/openapi/: mod.rs
src/service/: format_cache.rs  format_cache_tests.rs  json_report_renderer.rs  json_report_renderer_tests.rs  mod.rs  pdf_renderer_helper.rs  pdf_renderer_helper_tests.rs  report_json_injector.rs  report_json_injector_tests.rs  report_renderer.rs  report_xml_builder.rs  report_xml_builder_tests.rs  script_render_runner.rs  script_render_runner_tests.rs  xml_report_renderer.rs  xml_report_renderer_tests.rs
src/service/native_pdf/: constants.rs  cover.rs  document.rs  error.rs  grouping.rs  mod.rs  native_pdf_renderer_tests.rs  overview.rs  pdf_renderer.rs  renderer.rs  target.rs
src/service/typst/: config.rs  error.rs  pdf_renderer.rs  renderer.rs  renderer_tests.rs  report_view.rs  source_builder.rs  source_builder_tests.rs  typst_escape.rs
src/telemetry/: mod.rs  telemetry_tests.rs
src/xml/: mod.rs  report_format_parser.rs  report_validator.rs  report_validator_tests.rs
templates/typst/: technical.typ
tests/: golden_report_xml_builder.rs
tests/fixtures/: report_input.json
