[package]
name = "gvmr-lite-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
config = "0.15.22"
dotenvy = "0.15.7"
fpdf = "0.1.1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
printpdf = "0.9.1"
quick-xml = { version = "0.39.3", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "process", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
utoipa = "5.5.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
serial_test = "3.4.0"
tower = { version = "0.5", features = ["util"] }
